build_errors_v3.txt
warning: simple-image-viewer@0.9.9: icon.ico generated from icon.png
warning: use of deprecated type alias `image::io::Reader`: this type has been moved and renamed to image::ImageReader
 --> src\bin\make_trans.rs:5:26
  |
5 |     let img = image::io::Reader::open(src).unwrap().with_guessed_format().unwrap().decode().unwrap();
  |                          ^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

    Checking simple-image-viewer v0.9.9 (F:\Rust\SimpleImageViewer)
warning: `simple-image-viewer` (bin "make_trans" test) generated 1 warning
warning: `simple-image-viewer` (bin "make_trans") generated 1 warning (1 duplicate)
warning: hard linking files in the incremental compilation cache failed. copying files instead. consider moving the cache directory to a file system which supports hard linking in session dir `\\?\F:\Rust\SimpleImageViewer\target\debug\incremental\SimpleImageViewer-2lbzkbwb8wmr9\s-hhfpev1wvp-1ycmhvc-working`

warning: hard linking files in the incremental compilation cache failed. copying files instead. consider moving the cache directory to a file system which supports hard linking in session dir `\\?\F:\Rust\SimpleImageViewer\target\debug\incremental\SimpleImageViewer-1lkyvgriyg17l\s-hhfpev2jop-1a753z5-working`

warning: unused import: `rodio::Source`
  --> src\audio.rs:11:5
   |
11 | use rodio::Source;
   |     ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `HashSet`
 --> src\loader.rs:1:33
  |
1 | use std::collections::{HashMap, HashSet};
  |                                 ^^^^^^^

warning: unused import: `self`
  --> src\psb_reader.rs:14:15
   |
14 | use std::io::{self, BufReader, Read, Seek, SeekFrom};
   |               ^^^^

warning: use of deprecated type alias `egui::TopBottomPanel`: Use Panel::top or Panel::bottom instead
    --> src\app.rs:2749:31
     |
2749 |                         egui::TopBottomPanel::bottom("exif_footer")
     |                               ^^^^^^^^^^^^^^
     |
     = note: `#[warn(deprecated)]` on by default

warning: use of deprecated type alias `egui::TopBottomPanel`: Use Panel::top or Panel::bottom instead
    --> src\app.rs:2810:31
     |
2810 |                         egui::TopBottomPanel::bottom("xmp_footer")
     |                               ^^^^^^^^^^^^^^

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
   --> src\app.rs:576:47
    |
576 |                         let screen_size = ctx.screen_rect().size();
    |                                               ^^^^^^^^^^^

warning: use of deprecated method `egui::Context::wants_pointer_input`: Renamed to egui_wants_pointer_input
   --> src\app.rs:870:79
    |
870 |         let ui_consuming_scroll = any_modal_open || self.show_settings || ctx.wants_pointer_input();
    |                                                                               ^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `truncate` found for struct `egui::RichText` in the current scope
    --> src\app.rs:1313:96
     |
1313 | ...                   ui.label(RichText::new(format!("[{f}]")).color(TEXT_MUTED).small().truncate());
     |                                                                                          ^^^^^^^^ method not found in `egui::RichText`

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
    --> src\app.rs:2391:31
     |
2391 |         let screen_rect = ctx.screen_rect();
     |                               ^^^^^^^^^^^

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
    --> src\app.rs:2744:34
     |
2744 |                 .default_pos(ctx.screen_rect().center() - egui::vec2(210.0, 240.0))
     |                                  ^^^^^^^^^^^

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
    --> src\app.rs:2806:34
     |
2806 |                 .default_pos(ctx.screen_rect().center() - egui::vec2(320.0, 240.0))
     |                                  ^^^^^^^^^^^

warning: unused variable: `num_channels`
  --> src\psb_reader.rs:84:9
   |
84 |     let num_channels = channels.min(4); // We only care about up to 4 channels (RGBA)
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_num_channels`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `simple-image-viewer` (bin "SimpleImageViewer" test) generated 12 warnings (9 duplicates)
warning: simple-image-viewer@0.9.9: icon.ico generated from icon.png
error: could not compile `simple-image-viewer` (bin "SimpleImageViewer" test) due to 1 previous error; 12 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `simple-image-viewer` (bin "SimpleImageViewer") generated 12 warnings (2 duplicates)
warning: simple-image-viewer@0.9.9: icon.ico generated from icon.png
error: could not compile `simple-image-viewer` (bin "SimpleImageViewer") due to 1 previous error; 12 warnings emitted
